# routes/calendar.js
@@ -4,6 +4,9 @@ import authorization from "../middlewares/authorization.js";
 
 const router = Router();
 
-router.post('/', authorization, CalendarController.addFreeDay)
+router.get('/my-list', authorization, CalendarController.getMyCalendarList)
+router.get('/list', authorization, CalendarController.getList)
+router.post('/', authorization, CalendarController.addFreeTime)
+router.delete('/delete/:id', authorization, CalendarController.deleteFreeTime)
 
 export default router;
